apps/infra/portainer-proxy/resources/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: portainer-proxy
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
