apps/infra/portainer-proxy/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:kKqY03TaDvnameqyst8inY+QxqNtsUFveANLqCTS9IkHxg==,iv:qDnAOUGfSg7DsQb9cpC9m5ItXjtrHBckRTSMgSRV/K0=,tag:1vKW3N7sW7rhphXimBEhSA==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:eYzl2+h4dQ64Smef1q5AjMqcieTKVv52d6+nuEI/kvefEQ==,iv:Q/8nfziCjZIjBl6Dh60kCdqwgpQWVWX46Pc4gL8srOg=,tag:G8f+atSpxsqDvlizoNEUMQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:GumeF0QV01mZA9LhDVFEO5IyQbE0MzAM,iv:XM+s6rtxICVRW1clXj+LHp2GgptxfJsIaubUXJzY4ik=,tag:f58oZHLUkblSv974J03+qQ==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: portainer-production
    namespace: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          # || HostRegexp(`{subdomain:[a-z0-9]+}.anotherlife.org.pl`) && PathPrefix(`/outpost.goauthentik.io/`)
          match: ENC[AES256_GCM,data:uY+43r5sf1QPZfbMXRgi21uulEuqEKYXJaDIiipM2w32suG9z+FOnRpd,iv:ORp0S6c8Inf5hF6ojVzeuw0ildnLZryfOY4I1O1zYB4=,tag:oM+iEqzSBa5ue0Vg2usifQ==,type:str]
          priority: 10
          middlewares:
            - name: chain-authentik
              namespace: traefik
          services:
            - name: portainer-proxy
              port: 9443
              scheme: https
              # passHostHeader: true
    # - kind: Rule
    #   match: Host(`portainer.infra.anotherlife.org.pl`) && PathPrefix(`/outpost.goauthentik.io/`)
    #   priority: 15
    #   services:
    #     - kind: Service
    #       name: ak-outpost-example-outpost
    #       port: 9000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:O2rpcQ8ZvRr3Q7uaflr7U+AJE626lmS8,iv:vC4X05glm/qQ34cr2FHMAYD3hJiScGfkqDA2IEJg2Us=,tag:x5uLIrUuvekt5iAui0C2Xw==,type:str]
              sans:
                - ENC[AES256_GCM,data:BzFEOy/gpDnqd/D03A7dcli50fb0RzzmXg==,iv:QZd8GBX46cGBPuC46+MKdg+xbrxprJi0NkYNImSQiJo=,tag:SLOlDjjl1kXkM6ybOQ6HaQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: portainer-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQa2M0a2JlSXBGZjJPZ3Nz
[...]
            aadwp3W7aReQdNSFQ+yZdBn+cQPE6RDPFNuWU/8hggCRdr/QyZdLUA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-04T01:24:41Z"
    mac: ENC[AES256_GCM,data:QHytix+myZraFSJou5O4BjVHuAIKaAAsF3ABsmB0tNvuIx8aP4v8lSShrn4SmWPpLKVyr2A7Ecdor3f1aN8hhltH9wb9q2lAy7SFW8+/XMmJfkMl4ygtMXV/8DxI2To9lyiZrKRSD5Kv4gCQSs/Pgk2XVaFW9aU/h1xqkhhXi0Q=,iv:xrHGlVS/JjlV0Zz3A6loWER3E0i0Bgw/vqNvB1hlnPI=,tag:HGN8DuGYbuOY0EuePk2VSw==,type:str]
    pgp:
        - created_at: "2024-10-04T01:04:18Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//RrBcGxvUn5653UczDbXO8TH9L/RiSC2rMTArRwo/AxyD
[...]
            =nXQ1
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
