apps/infra/portainer-proxy/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: ENC[AES256_GCM,data:pwkVEwRkGV6RBs0OPLYuYdRZHddq5mQmWGOKW0SWBiQ47w==,iv:d51v/ubjRzf2rP9Sfyo2PcgkE4qfM0SxsWG4P+g7lko=,tag:eC0QeLGb40Oenb3ey/lG9w==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:kPaf/aZtNB4IBZbjnlc7FHyxSdxxEQAfifhBEsRvl/7uGQ==,iv:O1yZVn7W5O/jOtpplcr5M5QEIok9Bmw1FTe6xjwlcIE=,tag:GsXKV8smncs8Ozqll3jh2g==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:IJikBZ7uMEOoNpQ8oY7MPew00eXjZCeC,iv:Xx3NYI75y8XJ6S6PEIPdw+dNGJaovlQQRdygk5rH0CA=,tag:qzbF/5ayPApoDZRWlfCNAA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: portainer-staging
    namespace: traefik
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:K91kGz2FJ/Av8KMRALCtmjgAp1AtOotyozUnzyqIawOz6mYg/iZO+xoj,iv:Rctq8PPgS8q999n6ecYdg/w3z16wTm0YlSqqgKHqnQQ=,tag:w19HpmAh3tIN6qU80BXcsg==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - name: portainer-proxy
              port: 9443
              scheme: https
              passHostHeader: true
    tls:
        domains:
            - main: ENC[AES256_GCM,data:gA5sLF3AdC6g9bzLPxHZ9+CzWiynLEoH,iv:qxAVJ032bAY0V+wmriFSpIVJsuCp4irvhRdId3ffJm4=,tag:8QCTRYXJPO6lmYnaUzJ7zw==,type:str]
              sans:
                - ENC[AES256_GCM,data:195t3P7RnaYxfTjqKJsUN49juUzQh9UHZA==,iv:2IWCSaP5BAxcYzw97Dz8ZRnSXV575YqcZkt3Z++nreY=,tag:HiEQGfyZv2JO4yhT19GK4w==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: portainer-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGaVdBaWRTNkpLdVZ3UjNM
[...]
            QThZZWYmFAMzergFmlJpyA8qgydfMYv495gQssDZ0ieXZvVdrgJSaA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-04T01:04:22Z"
    mac: ENC[AES256_GCM,data:pYMSix4o0AfZvHfYT2dNW5NxbI4GL+EegcIjDVfVSF0RmRRSiUwkL/fNEmzbqOOrYoFUrCX9f65RFB52Iu9foNTTfzundzDbEXd+Dp1jUsAD/SKcY7/9yDQTwhAUxpZtDZEzdNOHV7B4ML8ZUP1lGT/qJwORTIT5n9nJGs4F0uQ=,iv:V5qCs3UR/IkQSV1Wtr/la1ELlt0pL6vxhjWQH3Ywgvo=,tag:2bj7Yf1SXEPeZ6akT8MXZw==,type:str]
    pgp:
        - created_at: "2024-10-04T01:04:22Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAqdg4APJpKZznKIgpq6JibjX3ClWoppL+ZRgdbzWGvv+O
[...]
            =y6TP
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
